<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication_message"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/button_authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_message_text"
        android:layout_centerHorizontal="true"
        android:text="@string/authenticate_now" />

    <LinearLayout
        android:id="@+id/pin_fallback_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_below="@+id/button_authenticate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_authentication"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/edit_text_login_pin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:hint="@string/pin_insert"
            android:gravity="center"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/button_verify_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_verify"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textSize="16sp"/>

    </LinearLayout> </RelativeLayout>