<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_file_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_file_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_size"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/text_view_file_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ex_timestamp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="4dp"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

</androidx.cardview.widget.CardView>